--- a/pages/anamnese médica.html
+++ b/pages/anamnese médica.html
@@ -106,7 +106,7 @@
         <nav class="navbar navbar-dark" id="nav">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="../images/avatar_bombeiro.png" width="60px"></a>
-                <p class="nav-title mt-3 fw-bold text">ANAMNESE DA EMERGÊNCIA MÉDICA</p>
+                <p class="navbar-title mt-3 fw-bold">ANAMNESE DA EMERGÊNCIA MÉDICA</p>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                     aria-label="Toggle navigation">
