--- a/pages/ocorrencia.html
+++ b/pages/ocorrencia.html
@@ -102,6 +102,7 @@
             display: flex;
             /* width: 20%; */
             /* height: 65%; */
+            align-items: center;
             justify-content: space-between;
         }
 
