--- a/pages/sinais.html
+++ b/pages/sinais.html
@@ -24,157 +24,192 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-<style>
-     * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-    body {
-        background-color: #c1c1c1;
-        height: 100vh;
-        font-family: 'Inter', sans-serif;
-        color: white;
+        body {
+            background-color: #c1c1c1;
+            height: 100vh;
+            font-family: 'Inter', sans-serif;
+            color: white;
 
-    }
+        }
 
-    #nav {
-        background-color: #333333;
-    }
-    .sinais{
-        background-color: #333333;
-        width: 75%;
-        height: 70%;
-        padding: 22px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        border-radius: 18px;
-        box-shadow: 0px 0px 15px #1E90FF;
-    }
-    .fundo{
-        width: 100vw;
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    .text-line {
+        .base {
+            display: flex;
+            flex-direction: column;
+            width: 100vw;
+
+        }
+
+        #nav {
+            background-color: #333333;
+        }
+
+        .fundo {
+            width: 100vw;
+            height: 78vh;
+            background-color: #1E90FF;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .sinais {
+            background-color: #333333;
+            width: 75%;
+            height: 75%;
+            padding: 22px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            border-radius: 18px;
+            box-shadow: 0px 0px 15px #1E90FF;
+        }
+
+        .text-line {
             background: transparent;
             color: white;
             border: none;
             border-bottom: 2px solid rgb(6, 108, 243);
         }
-        #pulso{
+
+        #pulso {
             width: 28%;
         }
-        #pressao{
+
+        #pressao {
             width: 32%;
         }
-        #satura{
+
+        #satura {
             width: 32%;
         }
-        .perfusao{
+
+        .perfusao {
             width: 48%;
             background-color: #333333;
             box-shadow: 0px 0px 15px #1E90FF;
             border-radius: 18px;
             display: flex;
         }
-        .normal_anormal{
+
+        .normal_anormal {
             width: 48%;
             background-color: #333333;
-             box-shadow: 0px 0px 15px #1E90FF;
-             border-radius: 18px;
+            box-shadow: 0px 0px 15px #1E90FF;
+            border-radius: 18px;
         }
-        .linha5{
+
+        .linha5 {
             display: flex;
             height: 8%;
             justify-content: space-between;
         }
-        .form-check{
+
+        .form-check {
             display: flex;
             align-items: center;
         }
-</style>
+
+        /* Botão  */
+        .espaço_botao {
+            display: flex;
+            width: 100%;
+            height: 15vh;
+            justify-content: center;
+        }
+
+        .botao {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 90%;
+        }
+    </style>
 </head>
+
 <body>
-    <nav class="navbar navbar-dark" id="nav">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"> <img src="../images/avatar_bombeiro.png" width="60px"></a>
-            <p class="navbar-title mt-3 fw-bold">SINAIS VITAIS</p>
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
-                data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
-                aria-labelledby="offcanvasDarkNavbarLabel">
-                <div class="offcanvas-header">
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
-                        aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body">
-                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">TELA DE INÍCIO</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">CATEGORIAS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">PERFIL</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">SAIR</a>
-                        </li>
+    <div class="base">
+
+        <nav class="navbar navbar-dark" id="nav">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"> <img src="../images/avatar_bombeiro.png" width="60px"></a>
+                <p class="navbar-title mt-3 fw-bold">SINAIS VITAIS</p>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+                    aria-labelledby="offcanvasDarkNavbarLabel">
+                    <div class="offcanvas-header">
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                            aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="#">TELA DE INÍCIO</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">CATEGORIAS</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">PERFIL</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">SAIR</a>
+                            </li>
+                    </div>
                 </div>
             </div>
-        </div>
-    </nav>
-
-    <div class="fundo">
-        <div class="sinais">
-            <div  class="linha1">
-                <div class="grupo1">
-                    <span>PRESSÃO ARTERIAL:</span>
-                    <input type="text" class="text-line" id="pressao">
-                    <span>X</span>
-                    <input type="text" class="text-line" id="pressao">
-                    <span>mmHg</span>
+        </nav>
+        <div class="fundo">
+            <div class="sinais">
+                <div class="linha1">
+                    <div class="grupo1">
+                        <span>PRESSÃO ARTERIAL:</span>
+                        <input type="text" class="text-line" id="pressao">
+                        <span>X</span>
+                        <input type="text" class="text-line" id="pressao">
+                        <span>mmHg</span>
+                    </div>
                 </div>
-             </div>
 
-            <div class="linha2">
-                <div class="grupo2">
+                <div class="linha2">
+                    <!-- <div class="grupo2">
                     <span>PULSO:</span>
                     <input type="text" class="text-line" id="pulso">
                     <span>B.C.P.M/RESPIRAÇÃO:</span>
                     <input type="text" class="text-line" id="pulso">
                     <span>M.R.M</span>
+                </div> -->
                 </div>
-            </div>
 
-            <div class="linha3">
-                <div class="grupo3">
+                <div class="linha3">
+                    <!-- <div class="grupo3">
                     <span>SATURAÇÃO:</span>
                     <input type="text" class="text-line" id="satura">
                     <span class="htg">%  /   HTG:</span>
                     <input type="text" class="text-line" id="satura">
+                </div> -->
                 </div>
-            </div>
 
-            <div class="linha4">
-                <div class="grupo4">
+                <div class="linha4">
+                    <!-- <div class="grupo4">
                     <span>TEMPERATURA:</span>
                     <input type="text" class="text-line" id="temperatura">
                     <span>C°</span>
+                </div> -->
                 </div>
-            </div>
-           
-            <div class="linha5">
-                <div class="perfusao">
+
+                <div class="linha5">
+                    <!-- <div class="perfusao">
                     <span class="d-flex align-items-center pl-3" >PERFUSÃO:</span>
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
@@ -182,10 +217,19 @@
                 </div>
                 <div class="normal_anormal">
 
+                </div> -->
                 </div>
             </div>
         </div>
+        <!-- Botão Voltar e Proxima -->
+        <div class="espaço_botao">
+            <div class="botao">
+                <button type="button" class="btn btn-outline-primary btn-lg">Voltar</button>
+                <button type="button" class="btn btn-outline-primary btn-lg">Proximo</button>
+            </div>
+        </div>
     </div>
-    
+
 </body>
+
 </html>
