--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -180,7 +180,7 @@
                 <input type="text" class="form-control" id="email" aria-describedby="email">
                 <br>
                 <label class="card-text mb-2">Matrícula</label>
-                <input type="text" class="form-control" id="matricula" aria-describedby="matricula">
+                <input type="number" class="form-control" id="matricula" aria-describedby="matricula">
                 <br>
                 <label class="card-text mb-2">Gênero</label>
                 <br>
@@ -198,7 +198,6 @@
 
             </div>
         </div>
-
     </form>
 
     <div class="d-flex justify-content-center">
