--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -24,6 +24,7 @@
 </head>
 
 <style>
+    /* Fundo */
     body {
         margin: 0;
         padding: 0;
@@ -39,6 +40,7 @@
         /* margin-top: 18%; */
     }
 
+    /* Bloco Text */
     .welcome_texto1 {
         display: flex;
         justify-content: center;
@@ -46,6 +48,8 @@
         color: white;
         font-size: 20px;
     }
+
+    /* Bloco img */
     .welcome_image {
         display: flex;
         margin-top: 4%;
@@ -53,6 +57,8 @@
     .welcome_image img {
         border-radius: 50%;
     }
+
+    /* Bloco texto */
     .welcome_texto2 {
         display: flex;
         flex-direction: column;
@@ -63,6 +69,8 @@
         margin-top: 6%;
         /* font-size: 1vw; */
     } 
+
+    /* Bloco botão */
     .welcome_botoes {
         display: flex;
         justify-content: center;
@@ -88,20 +96,24 @@
 
 <body>
     <div class="base_welcome">
+        <!-- Bloco Text -->
         <div class="welcome_texto1">
             <div>
                 <h1 class="fw-bold">Seja Bem Vindo</b></h1>
             </div>
         </div>
+        <!-- Bloco img -->
         <div class="welcome_image">
             <div>
                 <img src="../images/avatar_bombeiro.png" width="200px">
             </div>
         </div>
+        <!-- Bloco Text -->
         <div class="welcome_texto2">
             <h1 class="fw-semibold">Seu novo aplicativo</h1><br><br>
             <h2 class="fw-semibold">Preencha ocorrências, tenha acesso a<br>históricos e estatísticas </h2>
         </div>
+        <!-- Botão login -->
         <div class="welcome_botoes">
             <div>
                 <button class="botao_welcome" type="button" >Log in</button>
