--- a/pages/loading.html
+++ b/pages/loading.html
@@ -20,7 +20,9 @@
     <!-- media -->
     <link rel="icon" href="../images/avatar_bombeiro.png" type="image/png">
     <!--Imagem icon-->
+
     <style>
+        /* Fundo */
         body {
             margin: 0;
             padding: 0;
@@ -32,6 +34,7 @@
             width: 100%;
         }
 
+        /* Logos */
         section {
             display: flex;
             justify-content: center;
@@ -51,6 +54,7 @@
             align-items: center;
         }
 
+        /* Carregando */
         footer {
             display: flex;
             justify-content: center;
@@ -99,22 +103,19 @@
 
 <body>
     <header></header>
+    <!-- Logos -->
     <section>
         <div class="logos">
             <img class="logo1" src="../images/logo_noar.png">
             <img class="logo2" src="../images/logo-bombeiros1.png">
         </div>
     </section>
+    <!-- Carregando -->
     <footer>
         <div class="dot"></div>
         <div class="dot"></div>
         <div class="dot"></div>
     </footer>
-    <script>
-
-
-
-    </script>
 </body>
 
 </html>
