--- a/pages/vitimaera.html
+++ b/pages/vitimaera.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset=UTF-8>
     <!-- Linkagem -->
@@ -23,7 +24,24 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+
+        <script>
+            document.addEventListener("DOMContentLoaded", function () {
+                const checkboxes = document.querySelectorAll('.row input[type="checkbox"]');
+    
+                checkboxes.forEach(function (checkbox) {
+                    checkbox.addEventListener('change', function () {
+                        checkboxes.forEach(function (otherCheckbox) {
+                            if (otherCheckbox !== checkbox) {
+                                otherCheckbox.checked = false;
+                            }
+                        });
+                    });
+                });
+            });
+        </script>
 </head>
+
 <style>
     * {
         margin: 0;
@@ -47,6 +65,7 @@
         background-color: #333333;
         width: 40%;
         height: 13%;
+        border-radius: 10px;
     }
 
     #row {
@@ -54,17 +73,18 @@
     }
 
     .espaço_botao {
-            display: flex;
-            width: 100%;
-            height: 15vh;
-            justify-content: center;
-        }
+        display: flex;
+        width: 100%;
+        height: 15vh;
+        justify-content: center;
+    }
+
     .botao {
-         display: flex;
+        display: flex;
         justify-content: space-between;
-         align-items: center;
+        align-items: center;
         width: 90%;
-        }
+    }
 </style>
 
 <body>
@@ -89,18 +109,19 @@
                             <a class="nav-link" aria-current="page" href="#">TELA DE INÍCIO</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                              Dropdown
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Dropdown
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark">
-                              <li><a class="dropdown-item" href="#">Action</a></li>
-                              <li><a class="dropdown-item" href="#">Another action</a></li>
-                              <li>
-                                <hr class="dropdown-divider">
-                              </li>
-                              <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
                             </ul>
-                          </li>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">CATEGORIAS</a>
                         </li>
