solução de erros

--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -32,8 +32,8 @@
         }
 
         .form-control:focus {
-            border-color: rgb(6, 108, 243);
-            box-shadow: 0 0 0 0.1rem rgb(6, 108, 243);
+            border-color: red;
+            box-shadow: 0 0 0 0.2rem rgba(241, 13, 13, 0.3);
         }
 
         #nav {
