--- a/pages/situation.html
+++ b/pages/situation.html
@@ -174,7 +174,7 @@
         margin-left: 2;
         padding-left: 30px;
         margin-left: 150px;
-        margin-top: -20px;
+        margin-top: -8px;
         /* /Espaço para o checkbox personalizado */
         margin-bottom: 10px;
         cursor: pointer;
@@ -326,7 +326,7 @@
                 <div class="quadrado">
                     <div class="consciente">
                         <div class="consciente_texto">
-                            <h4>Consciente</h4>
+                            <h4 style="margin-bottom: 0;">Consciente</h4>
                             <label class="checkbox-container">
                                 <input type="checkbox">
                                 <span class="checkmark"></span>
@@ -335,7 +335,7 @@
                     </div>
                     <div class="inconsciente">
                         <div class="consciente_texto">
-                            <h4>Inconsciente</h4>
+                            <h4 style="margin-bottom: 0;">Inconsciente</h4>
                             <label class="checkbox-container">
                                 <input type="checkbox">
                                 <span class="checkmark"></span>
