--- a/pages/equipedeatendimento.html
+++ b/pages/equipedeatendimento.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -121,8 +121,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE
-                                        CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
+                                <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -170,7 +169,7 @@
                 <br>
                 <input type="text" class="form-control" id="nome" aria-describedby="name" placeholder="H.CH">
                 <br>
-                <input type="text" class="form-control" id="nome" aria-describedby="name" placeholder="NºUSB">
+                <input type="text" class="form-control" id="nome" aria-describedby="name" placeholder="KM FINAL">
                 <br>
                 <input type="text" class="form-control" id="nome" aria-describedby="name" placeholder="COD. SIA/SUS">
                 <br>
